# CSEN1021

./: 1.py  Assignment.py  Currency.py  README.md  Test.py  chromedriver  currencyData.txt  example.xlsx  main.py  pyproject.toml  replit.nix  salary.xlsx
Fun/: 1.py  2.py  21_NumberGame.py  AlarmClock.py  Calendar.py  Currency.py  Flames.py  GuessingNumber.py  Hangman.py  Heart.py  LoveCalculator.py  Mastermind.py  NumberGuess.py  PeriodicTable.py  QR.py  RockPaperScissor.py  Virus.py  hangman_visual.py  player.py
Fun/Projects/: Flight.py  NumberGuess.py  TicTacToe.py  words.py
Module-01/: Calculator.py  CompoundInterest.py  DistanceConversion.py  MathsFunction.py  PerfectNumber.py  StrongNumber.py  TimeConversion.py  test.py
Module-02/: Comb.py  DataQ2.py  DataQ3.py  Data_Structure.py  Dictionary.py  Func.py  GCD.py  Graphs.py  Graphs1.py  List_Index.py  Sets.py  Tuple.py
Module-03/: 1.py  DataHandling.py  Excel_Read.py  FileHandling.py  JSON.py  JSON1.py  Panda.py  Panda1.py  Panda2.py
Module-04/: CRUD.py
Module-05/: RegEx.py  Telugu.py
Module-06/: HTTPS.py
Practice/: 1.py  AscendingList.py  InterchangeList.py  OccurrenceList.py  OddInRange.py  OddList.py  ReverseTuple.py  StringOperators.py  SwapTuple.py
Week-2/: 1.py  SumEvenRange.py
