[tool.poetry]
name = "repl_python3_beta_DenseClearcutComputergames"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
opencv-python = "^4.5.5"
qrcode = "^7.3.1"
colorama = "^0.4.4"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
